2003-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogMagickEvent): Unlock semaphore before
	returning.
	* ltdl/ltdl.h: Updated to latest CVS version.
	* ltdl/ltdl.c: Updated to latest CVS version.
	* Libtool: Updated to use latest CVS libtool.

2003-07-17  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick: Contributed initial Borland C++ Builder 6.0 build
	environment.

2003-07-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (GetColorInfoArray): Added a function to access
	the color definition list as an array.
	(GetColorList): Added access locks to ensure that list is not
	re-ordered while it is being traversed.
	* www/Magick++/Image.html: Add some more information regarding raw
	pixel access.

2003-07-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/GraphicsMagickWand.pc.in (Cflags): Remove LFS_CPPFLAGS.
	* wand/GraphicsMagickWand-config.in: Remove LFS_CPPFLAGS.
	* magick/GraphicsMagick.pc.in (Cflags): Remove LFS_CPPFLAGS.
	* magick/GraphicsMagick-config.in: Remove LFS_CPPFLAGS.
	* configure.ac: Logic for setting LFS_CPPFLAGS was incomplete.
	* coders/topol.c: Updated topol coder contributed by Jaroslav
	Fojtik.  Topol is coming to life!

2003-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h: Add a typedef for ssize_t
	* magick/deprecate.h: ExtendedSignedIntegralType and
	ExtendedUnsignedIntegralType are now deprecated types so they are
	moved to deprecate.h. Existing code which uses these types should
	continue to work.
	* magick/blob.c (MapBlob): Change 'offset' parameter from type
	off_t to magick_off_t so that it is not LFS dependent.
	* magick/cache.c (GetPixelCacheArea): Return magick_off_t.
	(PersistCache): Change 'offset' parameter to type magick_off_t.
	* magick/cache.h (NexusInfo): Change 'length' type from
	ExtendedSignedIntegralType to magick_off_t.
	(CacheInfo): Change 'offset' and 'length' types from
	ExtendedSignedIntegralType to magick_off_t.