@@ -56,6 +56,8 @@
 2003-07-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/cache.c: Disable the Windows open() extensions when
+        compiling using Borland C++.<BR>
   <LI> magick/log.c (LogMagickEvent): Unlock semaphore before
         returning.<BR>
   <LI> ltdl/ltdl.h: Updated to latest CVS version.
