@@ -1,5 +1,7 @@
 2003-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/cache.c: Disable the Windows open() extensions when
+	compiling using Borland C++.
 	* magick/log.c (LogMagickEvent): Unlock semaphore before
 	returning.
 	* ltdl/ltdl.h: Updated to latest CVS version.
